# ajar

./: .ajar.yml.example  .dockerignore  .gitattributes  .gitignore  .pre-commit-hooks.yaml  ACCEPTABLE_USE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  LICENSE  NOTICE  README.md  RULES.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  rule_request.md
.github/workflows/: ajar.yml  ci.yml  publish.yml
ajar/: __init__.py  baseline.py  cli.py  config.py  entropy.py  host.py  models.py  parsing.py  report.py  rules.py  scanner.py  taint.py
ajar/rules/: crypto_auth.yml  csharp.yml  csrf_web.yml  denial_of_service.yml  fail_open.yml  go_java_php.yml  injection.yml  insecure_defaults.yml  nosql.yml  secrets.yml  web_javascript.yml
examples/: vulnerable_config.py  vulnerable_webapp.py
skills/ajar/: SKILL.md
skills/ajar/references/: auth-and-secrets.md  injection.md  methodology.md  nextjs-web.md  verifying-and-exploitability.md
tests/: test_config.py  test_host.py  test_languages.py  test_parsing.py  test_scanner.py
